--- a/action.yml
+++ b/action.yml
@@ -59,4 +59,4 @@ inputs:
     required: false
 runs:
   using: "docker"
-  image: "Dockerfile"
+  image: docker://blackbirdcloud/action-kaniko:1.0.0
